/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.6/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation 'org.apache.pdfbox:pdfbox:3.0.2'
    implementation 'org.apache.poi:poi-ooxml:5.2.5'
    implementation 'technology.tabula:tabula:1.0.5'
    implementation 'net.sourceforge.tess4j:tess4j:4.5.5'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    // LangChain4J for tokenizing text and document handling
    implementation 'dev.langchain4j:langchain4j:0.31.0'

    // https://mvnrepository.com/artifact/dev.langchain4j/langchain4j-embeddings
    implementation 'dev.langchain4j:langchain4j-embeddings:0.31.0'
    // https://mvnrepository.com/artifact/com.itextpdf/itextpdf
    implementation 'com.itextpdf:itextpdf:5.5.13.4'

    // LangChain4J Apache POI document parser
    implementation 'dev.langchain4j:langchain4j-document-parser-apache-poi:0.31.0'

    // LangChain4J Apache PDFBox document parser
    implementation 'dev.langchain4j:langchain4j-document-parser-apache-pdfbox:0.31.0'

    // OpenCSV for writing to CSV files
    implementation 'com.opencsv:opencsv:5.5.2'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.App'
}
